--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "raju",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "nodemon": "^3.1.7",
     "sqlite3": "^5.1.7"
