--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "author": "raju",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^9.3.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "nodemon": "^3.1.7",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "yup": "^1.5.0"
   }
 }
