--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.21.2",
     "nodemon": "^3.1.7",
     "sqlite3": "^5.1.7",
+    "winston": "^3.17.0",
     "yup": "^1.5.0"
   }
 }
